Added the drag and drop feature + activated it for the presentation

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -64,7 +64,11 @@
           <h4 id="chartDiagnosis3">INSERT TEXT HERE</h4>
         </div>
 
-        <p>Drag-and-drop the blue box.</p>
+        <div id="dragdrop">
+          <h4>REMOVE ILLNESS / DISEASE</h4>
+          <h4 class="delete">ILLNESS REMOVED</h4>
+          <h5 id="remove">Drag and drop your illness / disease into the delete box. Remember, your risks of catching or developing the other two diseases / illnesses will increase.</h5>
+        </div>
 
       </div>
     </section>
