Added some styling elements.

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -67,7 +67,26 @@
         <div id="dragdrop">
           <h4>REMOVE ILLNESS / DISEASE</h4>
           <h4 class="delete">ILLNESS REMOVED</h4>
-          <h5 id="remove">Drag and drop your illness / disease into the delete box. Remember, your risks of catching or developing the other two diseases / illnesses will increase.</h5>
+          <h5>Drag and drop your illness / disease into the delete box. Remember, your risks of catching or developing the other two diseases / illnesses will increase.</h5>
+
+          <div id="board">
+
+            <div>
+              <h5>DISEASES</h5>
+              <h5>DELETE</h5>
+            </div>
+
+            <ul id="current-diseases">
+                <li id="item1" draggable="true">Task 1</li>
+                <li id="item2" draggable="true">Task 2</li>
+                <li id="item3" draggable="true">Task 3</li>
+                <li id="item4" draggable="true">Task 4</li>
+            </ul>
+
+            <ul id="remove-disease">
+            </ul>
+          </div>
+
         </div>
 
       </div>
