Added a random number formula between 100-170 for the heart rate

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -127,6 +127,7 @@
       <h2>Heart Rate Tracker</h2>
       <p>Track your heart rate to see your current heart health levels</p>
       <img src="../img/heartrate.svg">
+      <h2 class="rate"></h2>
       <div id="ball"></div>
     </section>
 
