Adjusted some css features to make the page responsive

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -105,7 +105,7 @@
 
     <!--- //////////// PSYCHOLOGIST/COUNSELLOR SECTION //////////////////// -->
     <section id="psychologist" class='draggable resizable'>
-      <h2>Psychiatrist / Counsellor</h2>
+      <h2>Psychiatrist/<br>Counsellor</h2>
       <p>This service will listen to you and guide you in the right direction</p>
       <img src="../img/psychiatrist.svg">
 
@@ -128,6 +128,7 @@
       <p>Track your heart rate to see your current heart health levels</p>
       <img src="../img/heartrate.svg">
       <h2 class="rate"></h2>
+      <h4>beats per minute</h4>
       <div id="ball"></div>
     </section>
 
@@ -140,7 +141,7 @@
 
     <!--- //////////// PHARMACY/COMMUNITY SECTION //////////////////// -->
     <section id="pharmacy" class='draggable resizable'>
-      <h2>Pharmacy / Community</h2>
+      <h2>Pharmacy/<br>Community</h2>
       <p>Order medication and connect to people with similar health</p>
       <img src="../img/medication.svg">
   </div>
