Adjusted some css properties

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -97,11 +97,11 @@
     </section><!-- END OF DIAGNOSIS CENTER SECTION -->
 
     <!--- //////////// XRAY SERVICES SECTION //////////////////// -->
-    <section id="xray" class='draggable resizable margin'>
+    <!-- <section id="xray" class='draggable resizable margin'>
       <h2>X-Ray<br>Services</h2>
       <p>Scan a body part to check for a potential disease and illness</p>
       <img src="../img/xray.svg">
-    </section>
+    </section> -->
 
     <!--- //////////// PSYCHOLOGIST/COUNSELLOR SECTION //////////////////// -->
     <section id="psychologist" class='draggable resizable'>
@@ -127,17 +127,19 @@
       <h2>Heart Rate Tracker</h2>
       <p>Track your heart rate to see your current heart health levels</p>
       <img src="../img/heartrate.svg">
-      <h2 class="rate"></h2>
-      <h4>beats per minute</h4>
       <div id="ball"></div>
+      <div  id="rateresults">
+        <h2 class="rate"></h2>
+        <h4>beats per minute</h4>
+      </div>
     </section>
 
     <!--- //////////// WORKOUT LOG SECTION //////////////////// -->
-    <section id="workout" class='draggable resizable margin'>
+    <!-- <section id="workout" class='draggable resizable margin'>
       <h2>Workout<br>Log</h2>
       <p>See your recent workouts and track your physical activity</p>
       <img src="../img/exercise.svg">
-    </section>
+    </section> -->
 
     <!--- //////////// PHARMACY/COMMUNITY SECTION //////////////////// -->
     <section id="pharmacy" class='draggable resizable'>
