Added the a-drugs to the pharmacy

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -146,6 +146,7 @@
       <h2>Pharmacy/<br>Community</h2>
       <p>Order medication and connect to people with similar health</p>
       <img src="../img/medication.svg">
+      <p class="drugs"></p>
   </div>
 
   <!--- //////////// VARIOUS LIBRARIES AND MY OWN SCRIPTS IN JAVASCRIPT //////////////////// -->
