Added some animation to the list of medication

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -69,39 +69,8 @@
           <h4 id="chartValue3">INSERT TEXT HERE</h4>
           <h4 id="chartDiagnosis3">INSERT TEXT HERE</h4>
         </div>
-
-        <!-- This applies to the drag and drop your disease function. -->
-        <div id="dragdrop">
-          <h4>REMOVE ILLNESS / DISEASE</h4>
-          <h4 class="delete">ILLNESS REMOVED</h4>
-          <h5>Drag and drop your illness / disease into the delete box. Remember, your risks of catching or developing the other two diseases / illnesses will increase.</h5>
-
-          <div id="board">
-            <div>
-              <h5>DISEASES</h5>
-              <h5>DELETE</h5>
-            </div>
-
-            <ul id="current-diseases">
-                <li id="item1" draggable="true">Task 1</li>
-                <li id="item2" draggable="true">Task 2</li>
-                <li id="item3" draggable="true">Task 3</li>
-                <li id="item4" draggable="true">Task 4</li>
-            </ul>
-
-            <ul id="remove-disease">
-            </ul>
-          </div>
-        </div>
       </div>
     </section><!-- END OF DIAGNOSIS CENTER SECTION -->
-
-    <!--- //////////// XRAY SERVICES SECTION //////////////////// -->
-    <!-- <section id="xray" class='draggable resizable margin'>
-      <h2>X-Ray<br>Services</h2>
-      <p>Scan a body part to check for a potential disease and illness</p>
-      <img src="../img/xray.svg">
-    </section> -->
 
     <!--- //////////// PSYCHOLOGIST/COUNSELLOR SECTION //////////////////// -->
     <section id="psychologist" class='draggable resizable'>
@@ -134,19 +103,13 @@
       </div>
     </section>
 
-    <!--- //////////// WORKOUT LOG SECTION //////////////////// -->
-    <!-- <section id="workout" class='draggable resizable margin'>
-      <h2>Workout<br>Log</h2>
-      <p>See your recent workouts and track your physical activity</p>
-      <img src="../img/exercise.svg">
-    </section> -->
-
     <!--- //////////// PHARMACY/COMMUNITY SECTION //////////////////// -->
     <section id="pharmacy" class='draggable resizable'>
-      <h2>Pharmacy/<br>Community</h2>
-      <p>Order medication and connect to people with similar health</p>
+      <h2>Pharmacy</h2>
+      <p>See the catalog of available medication.</p>
       <img src="../img/medication.svg">
-      <p class="drugs"></p>
+      <p class="drugsa"></p>
+      <p class="drugsb"></p>
   </div>
 
   <!--- //////////// VARIOUS LIBRARIES AND MY OWN SCRIPTS IN JAVASCRIPT //////////////////// -->
