Finalized the commenting on the pharmacy section

--- a/Assignments/Assignment2/html/dashboard.html
+++ b/Assignments/Assignment2/html/dashboard.html
@@ -110,6 +110,30 @@
       <img src="../img/medication.svg">
       <p class="drugsa"></p>
       <p class="drugsb"></p>
+      <p class="drugsc"></p>
+      <p class="drugsd"></p>
+      <p class="drugse"></p>
+      <p class="drugsf"></p>
+      <p class="drugsg"></p>
+      <p class="drugsh"></p>
+      <p class="drugsi"></p>
+      <p class="drugsj"></p>
+      <p class="drugsk"></p>
+      <p class="drugsl"></p>
+      <p class="drugsm"></p>
+      <p class="drugsn"></p>
+      <p class="drugso"></p>
+      <p class="drugsp"></p>
+      <p class="drugsq"></p>
+      <p class="drugsr"></p>
+      <p class="drugss"></p>
+      <p class="drugst"></p>
+      <p class="drugsu"></p>
+      <p class="drugsv"></p>
+      <p class="drugsw"></p>
+      <p class="drugsx"></p>
+      <p class="drugsy"></p>
+      <p class="drugsz"></p>
   </div>
 
   <!--- //////////// VARIOUS LIBRARIES AND MY OWN SCRIPTS IN JAVASCRIPT //////////////////// -->
